# memmark

./: .coverage 6  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  coverage 2.xml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: getting-started.md  index.md
docs/api/: crypto.md  index.md  integrity.md  poisoning.md  policy.md  provenance.md  reporters.md  scanner.md  taxonomy.md  watermark.md
docs/guide/: cli.md  integrity.md  migration.md  poisoning.md  provenance.md  security.md  watermarking.md
examples/: demo_manifest.json  run_demo.py  sample_memory.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/api/crypto/: index.html
site/api/integrity/: index.html
site/api/poisoning/: index.html
site/api/policy/: index.html
site/api/provenance/: index.html
site/api/reporters/: index.html
site/api/scanner/: index.html
site/api/taxonomy/: index.html
site/api/watermark/: index.html
site/changelog/: index.html
site/getting-started/: index.html
site/guide/cli/: index.html
site/guide/integrity/: index.html
site/guide/poisoning/: index.html
site/guide/provenance/: index.html
site/guide/security/: index.html
site/guide/watermarking/: index.html
site/search/: search_index.json
src/memmark/: __init__.py  __main__.py  cli.py  scanner.py  store.py
src/memmark/integrity/: __init__.py  diff.py  forensics.py  manifest.py
src/memmark/poisoning/: __init__.py  classifier.py  default_patterns.yaml  detector.py  remediation.py
src/memmark/policy/: __init__.py  generator.py
src/memmark/provenance/: __init__.py  graph.py  tracker.py  verifier.py
src/memmark/reporters/: __init__.py  console.py  html.py  json.py
src/memmark/store/: __init__.py  redis_store.py
src/memmark/taxonomy/: __init__.py  adapter.py
src/memmark/utils/: __init__.py  crypto.py  logging.py
src/memmark/watermark/: __init__.py  detector.py  injector.py  robustness.py
tests/: conftest.py  test_api.py  test_cli.py  test_crypto.py  test_e2e.py  test_edge_cases.py  test_integrity.py  test_poisoning.py  test_policy.py  test_provenance.py  test_redis_store.py  test_reporters.py  test_scan_pipeline.py  test_scanner.py  test_taxonomy.py  test_watermark.py
